--- a/prac-game.css
+++ b/prac-game.css
@@ -67,13 +67,13 @@ body{
   border:none;
   border-radius: 1rem;
   cursor: pointer;
-  font-family: cursive;
+  font-family: Arial , cursive;
   padding:1rem;
   font-size:1.25rem;
   background-color: #28c0a9b6;
   color:white;
   margin-bottom:120px;
-  margin-top:80px;
+  margin-top:40px;
 }
 .mainfooter{
   background-color: #2B3499;
