--- a/prac-game.css
+++ b/prac-game.css
@@ -18,6 +18,8 @@ body{
   align-items: center;
   flex-direction: column;
   gap: 4rem;
+  margin-top: 200px;
+  margin-bottom:300px;
 }
 .hide{
   display:none;
